force-app/main/default/objects/Frontline_Authorization_Program__c/Frontline_Authorization_Program__c.object-meta.xml
<CustomObject>
    <label>Frontline Authorization Program</label>
    <nameField>
        <displayFormat>FAPID-{00000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Frontline Authorization Program</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>