force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Approval_1__c.field-meta.xml
<CustomField>
    <fullName>Approval_1__c</fullName>
    <label>Approval 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>