force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Approval_2__c.field-meta.xml
<CustomField>
    <fullName>Approval_2__c</fullName>
    <description>Approval 2</description>
    <label>Approval 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>