force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Assigned_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Timestamp__c</fullName>
    <label>Assigned Timestamp</label>
    <type>DateTime</type>
</CustomField>