force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Frontline Authorization Program</relationshipLabel>
    <relationshipName>Frontline_Authorization_Program</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>