force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Class_Complimentary_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Class_Complimentary_Ticket__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>