force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Final_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Final_Timestamp__c</fullName>
    <label>Final Timestamp</label>
    <type>DateTime</type>
</CustomField>