force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Laundry_Voucher_Amount_per_perosn__c.field-meta.xml
<CustomField>
    <fullName>Laundry_Voucher_Amount_per_perosn__c</fullName>
    <label>(Laundry Voucher) Amount per perosn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>