force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Lounge_Category__c.field-meta.xml
<CustomField>
    <fullName>Lounge_Category__c</fullName>
    <label>Lounge Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>