force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Lounge_Location__c.field-meta.xml
<CustomField>
    <fullName>Lounge_Location__c</fullName>
    <label>Lounge Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BKK</fullName>
            </value>
            <value>
                <fullName>CEB</fullName>
            </value>
            <value>
                <fullName>CGK</fullName>
            </value>
            <value>
                <fullName>CNX</fullName>
            </value>
            <value>
                <fullName>CRK</fullName>
            </value>
            <value>
                <fullName>CTS</fullName>
            </value>
            <value>
                <fullName>DAD</fullName>
            </value>
            <value>
                <fullName>FUK</fullName>
            </value>
            <value>
                <fullName>HAN</fullName>
            </value>
            <value>
                <fullName>HKD</fullName>
            </value>
            <value>
                <fullName>HKG</fullName>
            </value>
            <value>
                <fullName>KIX</fullName>
            </value>
            <value>
                <fullName>KMJ</fullName>
            </value>
            <value>
                <fullName>KUL</fullName>
            </value>
            <value>
                <fullName>LAX</fullName>
            </value>
            <value>
                <fullName>MFM</fullName>
            </value>
            <value>
                <fullName>MNL</fullName>
            </value>
            <value>
                <fullName>NGO</fullName>
            </value>
            <value>
                <fullName>NRT</fullName>
            </value>
            <value>
                <fullName>OKA</fullName>
            </value>
            <value>
                <fullName>ONT</fullName>
            </value>
            <value>
                <fullName>PEN</fullName>
            </value>
            <value>
                <fullName>PHX</fullName>
            </value>
            <value>
                <fullName>PQC</fullName>
            </value>
            <value>
                <fullName>RMQ</fullName>
            </value>
            <value>
                <fullName>SDJ</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>SFO</fullName>
            </value>
            <value>
                <fullName>SGN</fullName>
            </value>
            <value>
                <fullName>SHI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>