force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Measure__c.field-meta.xml
<CustomField>
    <fullName>Measure__c</fullName>
    <label>Measure</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STARLUX Voucher</fullName>
            </value>
            <value>
                <fullName>Laundry Voucher</fullName>
            </value>
            <value>
                <fullName>Promocode</fullName>
            </value>
            <value>
                <fullName>Mileage</fullName>
            </value>
            <value>
                <fullName>Waiver</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>VIP Lounge</fullName>
            </value>
            <value>
                <fullName>Complimentary Seat</fullName>
            </value>
            <value>
                <fullName>Upgrade Service</fullName>
            </value>
            <value>
                <fullName>Complimentary Ticket</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>