force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Mileage_compensate_ppl_amount__c.field-meta.xml
<CustomField>
    <fullName>Mileage_compensate_ppl_amount__c</fullName>
    <label>Mileage compensate ppl. amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>