force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Mileage_Value__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Value__c</fullName>
    <label>Mileage Value/ person</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>