force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Number_of_pax_Complimentary_Seat__c.field-meta.xml
<CustomField>
    <fullName>Number_of_pax_Complimentary_Seat__c</fullName>
    <label>Number of pax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>