force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Number_of_pax_Complimentary_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Number_of_pax_Complimentary_Ticket__c</fullName>
    <label>Number of pax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>