force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Others_Remark__c.field-meta.xml
<CustomField>
    <fullName>Others_Remark__c</fullName>
    <label>Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>