force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Pax_Name_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Pax_Name_Upgrade__c</fullName>
    <inlineHelpText>Format same as E-TKT, e.g., WANG / DAMING MR.</inlineHelpText>
    <label>Pax Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>