force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Redeem_Request_from_SF_Com_TKT__c.field-meta.xml
<CustomField>
    <fullName>Redeem_Request_from_SF_Com_TKT__c</fullName>
    <label>Redeem Request from (SF#)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>