force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Redeem_TKT_No_VIP_Lounge__c.field-meta.xml
<CustomField>
    <fullName>Redeem_TKT_No_VIP_Lounge__c</fullName>
    <label>Redeem TKT No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>