force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Remark_Complimentary_Seat__c.field-meta.xml
<CustomField>
    <fullName>Remark_Complimentary_Seat__c</fullName>
    <inlineHelpText>Reissued on MMMDDYYYY, New TKT# , SF#</inlineHelpText>
    <label>Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>