force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frontline Authorization Program</fullName>
            </value>
            <value>
                <fullName>None Authorization Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>