force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Routes__c.field-meta.xml
<CustomField>
    <fullName>Routes__c</fullName>
    <label>Routes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short-haul</fullName>
            </value>
            <value>
                <fullName>Long-haul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>