force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Seat__c.field-meta.xml
<CustomField>
    <fullName>Seat__c</fullName>
    <label>Seat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extra Legroom Seats</fullName>
            </value>
            <value>
                <fullName>Forward Seats</fullName>
            </value>
            <value>
                <fullName>Standard Seat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>