force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Sector_Complimentary_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Sector_Complimentary_Ticket__c</fullName>
    <label>Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>