force-app/main/default/objects/Frontline_Authorization_Program__c/fields/STARLUX_Voucher_Amount_per_person__c.field-meta.xml
<CustomField>
    <fullName>STARLUX_Voucher_Amount_per_person__c</fullName>
    <label>(Voucher) Amount per person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>