force-app/main/default/objects/Frontline_Authorization_Program__c/fields/STARLUX_voucher_compensate_ppl_amount__c.field-meta.xml
<CustomField>
    <fullName>STARLUX_voucher_compensate_ppl_amount__c</fullName>
    <label>STARLUX voucher compensate ppl. amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>