force-app/main/default/objects/Frontline_Authorization_Program__c/fields/STARLUX_Voucher_Value__c.field-meta.xml
<CustomField>
    <fullName>STARLUX_Voucher_Value__c</fullName>
    <label>STARLUX Voucher Value/ person</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>