force-app/main/default/objects/Frontline_Authorization_Program__c/fields/Waiver_Total_amount__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Total_amount__c</fullName>
    <label>(Waiver) Total amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>