force-app/main/default/objects/Frontline_Authorization_Program__c/validationRules/Cash_paring_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Cash_paring_Amount</fullName>
    <active>true</active>
    <description>Cash paring Amount</description>
    <errorConditionFormula>ISPICKVAL( Measure__c , &quot;Cash&quot;) &amp;&amp;
(ISBLANK( Cash_Amount_per_person__c) || ISBLANK(Cash_Total_amount__c))</errorConditionFormula>
    <errorMessage>Please input Amount for Cash.</errorMessage>
</ValidationRule>