force-app/main/default/objects/Frontline_Authorization_Program__c/validationRules/Code_must_be_6_characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Code_must_be_6_characters</fullName>
    <active>true</active>
    <description>Code must be 6 characters</description>
    <errorConditionFormula>!ISBLANK( Code__c  ) &amp;&amp; LEN(Code__c ) &lt;&gt; 6</errorConditionFormula>
    <errorDisplayField>Code__c</errorDisplayField>
    <errorMessage>Code must be 6 characters</errorMessage>
</ValidationRule>