force-app/main/default/objects/Frontline_Authorization_Program__c/validationRules/Complimentary_Seat_cant_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Complimentary_Seat_cant_change</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(NOT(ISBLANK(PRIORVALUE(Routes__c))), ISCHANGED(Routes__c)),
    AND(NOT(ISBLANK(PRIORVALUE(Seat__c))), ISCHANGED(Seat__c)),
    AND(NOT(ISBLANK(PRIORVALUE(Number_of_pax_Complimentary_Seat__c))), ISCHANGED(Number_of_pax_Complimentary_Seat__c)),
    AND(NOT(ISBLANK(PRIORVALUE(Pax_Name_Complimentary_Seat__c))), ISCHANGED(Pax_Name_Complimentary_Seat__c)),
    AND(NOT(ISBLANK(PRIORVALUE(Redeem_Request_from_SF_Complimentary__c))), ISCHANGED(Redeem_Request_from_SF_Complimentary__c)),
    AND(NOT(ISBLANK(PRIORVALUE(Redeem_TKT_No_Complimentary_Seat__c))), ISCHANGED(Redeem_TKT_No_Complimentary_Seat__c))
)</errorConditionFormula>
    <errorMessage>Complimentary Seat Detail cannot be modified once it is entered.</errorMessage>
</ValidationRule>