force-app/main/default/objects/Frontline_Authorization_Program__c/validationRules/Complimentary_Seat_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Complimentary_Seat_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Measure__c , &quot;Complimentary Seat&quot;),
  OR(
    ISBLANK(TEXT(Routes__c)),
    ISBLANK(TEXT(Seat__c)),
    ISBLANK(TEXT(Number_of_pax_Complimentary_Seat__c)),
    ISBLANK(Pax_Name_Complimentary_Seat__c)
  )
)</errorConditionFormula>
    <errorMessage>When Measure = Complimentary Seat, Routes / Seat / Number of pax / Pax Name are all required.</errorMessage>
</ValidationRule>