force-app/main/default/objects/Frontline_Authorization_Program__c/validationRules/Complimentary_Ticket_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Complimentary_Ticket_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Measure__c , &quot;Complimentary Ticket&quot;),
  OR(
    ISBLANK(TEXT(Class_Complimentary_Ticket__c)),
    ISBLANK(Sector_Complimentary_Ticket__c),
    ISBLANK(TEXT(Number_of_pax_Complimentary_Ticket__c)),
    ISBLANK(Pax_Name_Complimentary_Ticket__c)
  )
)</errorConditionFormula>
    <errorMessage>When Measure = Complimentary Ticket, Class / Sector / Number of pax / Pax Name are all required.</errorMessage>
</ValidationRule>