force-app/main/default/objects/Frontline_Authorization_Program__c/validationRules/Gift_paring_Remark.validationRule-meta.xml
<ValidationRule>
    <fullName>Gift_paring_Remark</fullName>
    <active>true</active>
    <description>Gift paring Remark</description>
    <errorConditionFormula>ISPICKVAL( Measure__c , &quot;Gift&quot;) &amp;&amp;
ISBLANK( Remark__c )</errorConditionFormula>
    <errorDisplayField>Remark__c</errorDisplayField>
    <errorMessage>Please input Remark for Gift.</errorMessage>
</ValidationRule>