force-app/main/default/objects/Frontline_Authorization_Program__c/validationRules/Laundry_Voucher_paring_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Laundry_Voucher_paring_Amount</fullName>
    <active>true</active>
    <description>Laundry Voucher paring Amount</description>
    <errorConditionFormula>ISPICKVAL( Measure__c , &quot;Laundry Voucher&quot;) &amp;&amp;
(ISBLANK( Laundry_Voucher_Amount_per_perosn__c ) || ISBLANK( Laundry_Voucher_Total_amount__c ))</errorConditionFormula>
    <errorMessage>Please input amount for Laundry Voucher.</errorMessage>
</ValidationRule>