force-app/main/default/objects/Frontline_Authorization_Program__c/validationRules/Mileage_paring_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Mileage_paring_Amount</fullName>
    <active>true</active>
    <description>Mileage paring Amount</description>
    <errorConditionFormula>ISPICKVAL( Measure__c , &quot;Mileage&quot;) &amp;&amp;
(ISBLANK(  Mileage_Amount_per_person__c ) || ISBLANK( Mileage_Total_amount__c ))</errorConditionFormula>
    <errorMessage>Please input Amount for Mileage.</errorMessage>
</ValidationRule>