force-app/main/default/objects/Frontline_Authorization_Program__c/validationRules/Others_paring_Remark.validationRule-meta.xml
<ValidationRule>
    <fullName>Others_paring_Remark</fullName>
    <active>true</active>
    <description>Others paring Remark</description>
    <errorConditionFormula>ISPICKVAL( Measure__c , &quot;Others&quot;) &amp;&amp;
ISBLANK(Others_Remark__c)</errorConditionFormula>
    <errorDisplayField>Remark__c</errorDisplayField>
    <errorMessage>Please input Remark for Others.</errorMessage>
</ValidationRule>