force-app/main/default/objects/Frontline_Authorization_Program__c/validationRules/Promo_paring_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Promo_paring_Amount</fullName>
    <active>true</active>
    <description>Promocode paring Amount</description>
    <errorConditionFormula>ISPICKVAL( Measure__c , &quot;Promocode&quot;) &amp;&amp;
(ISBLANK(  Promo_code_Amount_per_person__c ) || ISBLANK( Promo_code_Total_amount__c ))</errorConditionFormula>
    <errorMessage>Please input Amount for Promocode.</errorMessage>
</ValidationRule>