force-app/main/default/objects/Frontline_Authorization_Program__c/validationRules/Resolution_paring_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_paring_Code</fullName>
    <active>true</active>
    <description>Resolution paring Code</description>
    <errorConditionFormula>ISPICKVAL( Resolution__c, &quot;Frontline Authorization Program&quot;) &amp;&amp;
ISBLANK(Code__c)</errorConditionFormula>
    <errorDisplayField>Code__c</errorDisplayField>
    <errorMessage>Please input Code for Resolution.</errorMessage>
</ValidationRule>