force-app/main/default/objects/Frontline_Authorization_Program__c/validationRules/STARLUX_Voucher_paring_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>STARLUX_Voucher_paring_Amount</fullName>
    <active>true</active>
    <description>STARLUX Voucher paring Amount</description>
    <errorConditionFormula>ISPICKVAL( Measure__c , &quot;STARLUX Voucher&quot;) &amp;&amp;
(ISBLANK( STARLUX_Voucher_Amount_per_person__c ) || ISBLANK( STARLUX_Voucher_Total_amount__c ))</errorConditionFormula>
    <errorMessage>Please input Amount for STARLUX Voucher.</errorMessage>
</ValidationRule>